src/app/pages/home/home.component.scss
@import '../../../styles/colors';

:host {
  position: absolute;
  display: table;
  height: 100%;
  width: 100%;
}

.header-container {
  height: 3.7rem;
  background: white;
  display: flex;
  justify-content: space-between;
  padding: 0 3%;
  border-bottom: 1px solid $gray-medium;
  align-items: center;

  .logo-container {
    padding-left: 1rem;
    width: 19rem;
    display: flex;

    .logo {
      height: 2rem;
    }
  }

  .tabs-header {
    display: flex;
    justify-content: space-between;
    align-items: center;
    width: 100%;
    padding: 0 0.5rem;

    .user-menu {
      display: flex;
      justify-content: center;
      align-items: center;

      .notifications-menu {
        margin-right: 20px;

        .menu-action {
          position: relative;
          cursor: pointer;

          .count-notifications {
            border-radius: 50%;
            background-color: orange;
            color: $white;
            position: absolute;
            top: -8px;
            left: -8px;
            width: 20px;
            height: 20px;
            display: flex;
            align-items: center;
            justify-content: center;
          }
        }
      }
    }

    .status-company {
      display: flex;
      justify-content: center;
      align-items: center;

      .employee-container {
        display: flex;
        align-items: center;
        cursor: pointer;

        .account {
          display: flex;
          flex-direction: column;

          .company-name{
            font-family: 'Circular-Book';
            font-size: 12px;
          }

          .employee-status{
            display: flex;
            font-family: 'Lato-Regular';
            font-size: 10px;

            &.approved {
              color: $green;
            }

            &.disabled {
              color: $gray-dark;
            }

            &.pending {
              color: $orange;
            }

            .icon {
              font-size: 12px;
              width: 0.6rem;
              height: 0.6rem;
              margin-right: 0.5rem;
            }
          }
        }
      }

      .add-button {
        font-size: 10px;
        color: $celeste;
      }
    }

    .menu-container {
      display: flex;
      align-items: center;

      .menu {
        display: flex;
        justify-content: space-between;
        align-items: center;
        cursor: pointer;

        .menu-action {
          display: flex;
          align-items: center;

          .profile-container {
            display: flex;
            align-items: center;

            .title {
              font-family: 'Circular-Book';
              font-size: 12px;
              margin-left: 1rem;
            }
          }
        }
      }
    }
  }
}

::ng-deep .mat-menu-content {
  min-width: 12rem;
  padding-top: 0 !important;
  padding-bottom: 0 !important;

  .notifications-container {
    height: 200px;
    overflow-y: auto;
    overflow-x: hidden;
  }

  .notification {
    padding: 5px 10px;
    display: flex;
    flex-direction: column;
    height: 30px;


    &:nth-child(odd) {
      border-top: 1px solid rgba(0,0,0,.12);
      border-bottom: 1px solid rgba(0,0,0,.12);
    }

    &:hover {
      background: #f7f7f7;
    }

    .actions {
      // flex-basis: 30%;
      display: flex;
      padding: 5px 0;

      .action {
        background: #f7f7f7;
        height: 20px;
        padding: 2px 8px;
        margin-right: 10px;
        cursor: pointer;
        display: flex;
        justify-content: center;
        align-items: center;

        &:hover{
          opacity: 0.8;
        }

        &.primary {
          background: $primary;
          color: $white;
        }

        &.secondary {
          background: $gray-ligth;
        }
      }
    }
  }

  .user-data {
    display: flex;
    justify-content: space-around;
    align-items: center;
    border-bottom: 1px solid $gray-medium;
    padding: 10px 0;

    .user-info {
      display: flex;
      flex-direction: column;

      .name {
        font-family: 'Circular-Book';
        font-size: 12px;
      }

      .email {
        font-family: 'Lato-Regular';
        font-size: 10px;
        color: $gray-dark;
      }
    }
  }

  .item-wrapper {
    display: flex;
    align-items: center;

    &.active {
      pointer-events: none;
      background-color: $primary;
      color: white;
      cursor: default;
    }

    .information {
      margin-left: 0.5rem;
      display: flex;
      flex-direction: column;
      line-height: normal;

      .name {
        font-family: 'Lato-Regular';
      }

      .role {
        font-size: 8px;

        .approved {
          color: $green;
        }

        .disabled {
          color: $gray-dark;
        }

        .pending {
          color: $orange;
        }
      }
    }
  }
}

.main-view {
  display: flex;
  height: 100%;

  .left-panel {
    background: white;
    width: 18rem;
    padding: 2rem 1rem 0 1rem;

    .tabs {
      display: flex;
      width: 100%;
      text-decoration: none;
      align-items: center;
      color: $gray-dark;
      font-size: 12px;

      &.disabled {
        opacity: 0.5;
        pointer-events: none;
      }

      mat-icon{
        padding-left: 3rem;
      }

      span {
        padding: 1rem;
      }

      &:hover:not(.active) {
        background: $labaster;
      }
    }

    .active {
      background: $primary;
      color: $white;
    }
  }

  .render-container {
    width: 100%;
    height: 100%;
  }
}

